--- a/vue2.0/index.html
+++ b/vue2.0/index.html
@@ -1,12 +1,23 @@
+<!--
+ * @Author: shuwang_wu
+ * @Date: 2021-05-13 09:55:35
+ * @LastEditTime: 2021-05-25 17:19:32
+ * @LastEditors: shuwang_wu
+ * @Description: 
+ * @FilePath: \vue2.0\index.html
+-->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue2.0</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>vue2.0</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
